lib_LIBRARIES = libcppapp.a
libcppapp_a_SOURCES = cppapp/AppBase.cpp cppapp/Config.cpp cppapp/Exception.cpp cppapp/Input.cpp cppapp/Logger.cpp cppapp/Mutex.cpp cppapp/Object.cpp cppapp/Options.cpp cppapp/Output.cpp cppapp/Stopwatch.cpp cppapp/Test.cpp cppapp/TestApp.cpp cppapp/Thread.cpp cppapp/string_utils.cpp cppapp/utils.cpp

library_includedir=$(includedir)/cppapp-@PACKAGE_VERSION@/cppapp
library_include_HEADERS = cppapp/AppBase.h cppapp/Config.h cppapp/Exception.h cppapp/Input.h cppapp/Logger.h cppapp/Mutex.h cppapp/Object.h cppapp/Options.h cppapp/Output.h cppapp/Stopwatch.h cppapp/Test.h cppapp/TestApp.h cppapp/Thread.h cppapp/cppapp.h cppapp/string_utils.h cppapp/utils.h

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = cppapp-@PACKAGE_VERSION@.pc

